# ProjectilePy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ProjectilePy/: simulator.py
src/ProjectilePy/: __init__.py  projectilesimulator.py
src/examples/: examples.py
src/tests/: projectilesimulator_tests.py
